# src/domain/entities/Seccion.ts
@@ -1,0 +1,9 @@
+export class Seccion {
+  constructor(
+    readonly id: number,
+    readonly distritoMunicipalId: number | null,
+    readonly nombre: string,
+    readonly estado: string,
+    readonly creadoEn: Date
+  ) {}
+}
